tests/machine/x/php/user_type_literal.error
line: 22
error: run error: exit status 255
PHP Fatal error:  Uncaught Error: Cannot use object of type Book as array in /workspace/mochi/tests/machine/x/php/user_type_literal.php:22
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/machine/x/php/user_type_literal.php on line 22

